--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -420,12 +420,12 @@ main > .page-article {
    iets breder voor "Kwetsbaarheid melden". */
 @media (min-width: 700px) {
   body > footer .tagline {
-    max-width: 50ch;
+    max-width: 40ch;
     flex: 0 1 auto;
   }
   body > footer .footer-columns > nav[aria-label="Zie ook"] {
-    min-width: 9rem;
-    flex: 0 0 9rem;
+    min-width: 10rem;
+    flex: 0 0 10rem;
   }
   body > footer .footer-columns > nav[aria-label="Over deze site"] {
     min-width: 14rem;
